# accountant-tg-bot

./: .gitignore  README.md  pyproject.toml
src/: accountant.py  main.py
src/accounting/: model.py  service.py
src/db/: database_initializer.py  model.py  session_factory.py
tests/accounting/: test_db.py  test_service.py
tests/db/: test_session_factory.py
